"fixed Group.group to show only the array with index = identity"

--- a/simulations/master_simulation/master_simulation.ipynb
+++ b/simulations/master_simulation/master_simulation.ipynb
@@ -2008,6 +2008,10 @@
     "\n",
     "node_array = [sc.Node(env, 'Node %d' % i, datetime.datetime.now(), 10, group_counter)\n",
     "            for i in range(nodes)] #number of nodes\n",
+    "\n",
+    "print(\"creating groups\")\n",
+    "group_array = [sc.Group(env, 'Group %d' % i, group_size, group_distr_matrix)\n",
+    "            for i in range(nodes)] #number of nodes\n",
     "env.run()\n",
     "\n",
     "df = []\n",
@@ -2031,19 +2035,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0.]\n",
-      " [0. 0.]]\n"
+      "creating groups\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "env = simpy.Environment()\n",
+    "print(\"creating groups\")\n",
+    "group_array = [sc.Group(env, 'Group %d' % i, group_size, group_distr_matrix)\n",
+    "            for i in range(nodes)] #number of nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0.]\n",
+      "[False False False False False False False False False False False  True\n",
+      " False False  True False False False  True  True False False False False\n",
+      " False  True False  True False  True False  True False False  True  True\n",
+      "  True  True  True False  True False  True False  True False False  True\n",
+      "  True  True  True  True  True  True False False  True  True  True  True\n",
+      "  True  True False  True  True  True  True  True  True  True False  True\n",
+      " False  True  True  True  True  True False  True  True  True False False\n",
+      "  True  True  True  True  True False  True False  True  True False  True\n",
+      "  True  True  True  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=group_array[0].member_check\n",
+    "print(a)\n",
+    "\n",
+    "b=group_array[0].group\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "code",
