removed group formation from node states - move to signing process

--- a/simulations/master_simulation/Untitled1.ipynb
+++ b/simulations/master_simulation/Untitled1.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "How do our existing token allocations look?\n",
     "What does success look like for the mining event?\n",
+    "    \n",
+    "    Respones: run group sim with existing distribution. What if analysis for mining event?\n",
     "\n",
     "What is the effect of node failure? - more important\n",
     "What happens if the people withdraw?\n",
@@ -15,6 +17,13 @@
     "we can detect if a node becomes inactive\n",
     "group size can be reduced by the end of dkg"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
