removed entry generation

--- a/simulations/master_simulation/master_simulation.ipynb
+++ b/simulations/master_simulation/master_simulation.ipynb
@@ -163,19 +163,21 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[False False False ...  True False False]\n",
-      " [False False False ... False  True False]\n",
-      " [False False False ... False False False]\n",
+      "[[False False False ... False False False]\n",
+      " [False False False ... False False  True]\n",
+      " [False False False ... False False  True]\n",
       " ...\n",
-      " [ True False False ... False False False]\n",
-      " [False  True False ... False False False]\n",
-      " [False False False ... False False False]]\n"
+      " [False False False ... False  True False]\n",
+      " [False False  True ... False False False]\n",
+      " [False False False ... False False  True]]\n"
      ]
     }
    ],
@@ -206,20 +208,20 @@
     },
     {
      "ename": "NameError",
-     "evalue": "name 'group_increment' is not defined",
+     "evalue": "name 'group_counter' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-11563ac02be2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0menv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msimpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEnvironment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"creating nodes\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mgroup_counter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgroup_increment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroup_members\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m node_array = [sc.Node(env, 'Node %d' % i, datetime.datetime.now(), 10, group_counter)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'group_increment' is not defined"
+      "\u001b[0;32m<ipython-input-8-ac0d2499eb09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m node_array = [sc.Node(env, 'Node %d' % i, datetime.datetime.now(), 10, group_counter)\n\u001b[0;32m----> 5\u001b[0;31m             for i in range(nodes)] #number of nodes\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"creating groups\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-ac0d2499eb09>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m node_array = [sc.Node(env, 'Node %d' % i, datetime.datetime.now(), 10, group_counter)\n\u001b[0;32m----> 5\u001b[0;31m             for i in range(nodes)] #number of nodes\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"creating groups\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'group_counter' is not defined"
      ]
     }
    ],
    "source": [
     "env = simpy.Environment()\n",
     "print(\"creating nodes\")\n",
-    "group_counter = group_increment(env, group_members)\n",
     "\n",
     "node_array = [sc.Node(env, 'Node %d' % i, datetime.datetime.now(), 10, group_counter)\n",
     "            for i in range(nodes)] #number of nodes\n",
@@ -227,7 +229,10 @@
     "print(\"creating groups\")\n",
     "group_array = [sc.Group(env, i, group_size, group_distr_matrix)\n",
     "            for i in range(runs)] #number of nodes\n",
-    "env.run()\n",
+    "\n",
+    "proc = relay_entry(env, runs, group_object_array, node_object_array)\n",
+    "\n",
+    "env.run(until=proc)\n",
     "\n",
     "df = []\n",
     "for n in node_array:\n",
@@ -246,26 +251,6 @@
    "metadata": {},
    "source": [
     "**Simulation Results**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating groups\n"
-     ]
-    }
-   ],
-   "source": [
-    "env = simpy.Environment()\n",
-    "print(\"creating groups\")\n",
-    "group_array = [sc.Group(env, i, group_size, group_distr_matrix)\n",
-    "            for i in range(runs)] #number of nodes"
    ]
   },
   {
