--- a/docs/rfc/rfc-8-beacon-signature-share-verification.adoc
+++ b/docs/rfc/rfc-8-beacon-signature-share-verification.adoc
@@ -26,7 +26,7 @@ to reconstruct the threshold signature,
 which is then submitted as the next entry for the beacon.
 
 If one or more participants broadcast invalid signature shares,
-they may significantry hinder or altogether prevent
+they may significantly hinder or altogether prevent
 the entry generation within the allotted time.
 If an invalid share is included in the `H` signature shares
 the threshold signature is reconstructed from,
@@ -53,6 +53,7 @@ while permitting _O(log(N))_ verification of misbehavior proofs.
 The merkle root is also useful for other purposes.
 
 === Specification
+`P1`:: The generator point for the BLS elliptic curve
 `X_k`:: The group private key of `Group_k`
 `Y_k`:: The group public key: `Y_k = P1 * X_k`
 `Entry_e`:: The entry matching the entry identifier `e`
@@ -67,17 +68,19 @@ Each `Share_i` must be broadcast as a _signature share message_
 adhering to a strict canonical format.
 
 The _signature share message_ must contain:
+
 * the entry identifier `e` for this particular entry
 * the signature share `Share_i`
 * the sender `P_i`'s member index `i`
 * a signature by `P_i` to the above data,
-using `P_i`'s _operator ECDSA key_
+using the _operator ECDSA key_ of `P_i`
 
 When `P_i` receives a _signature share message_ from `P_j`,
 they must verify the following:
+
 * the message is correctly formatted
 * the entry identifier `e` is correct
-* the signature with `P_i`'s _operator ECDSA key_ is valid
+* the signature with the _operator ECDSA key_ of `P_i` is valid
 
 If any of the above checks fail,
 the message must be rejected as invalid.
@@ -100,6 +103,7 @@ from `P_j`, containing an invalid `Share_j`,
 `P_i` should produce and publish a _proof of misbehavior_ (_"proof"_).
 
 The _proof_ must contain:
+
 * the _message_ with the invalid share from `P_j`
 * the individual private key `y_j` of `P_j`
 and a _merkle path_ from `y_j` to the _merkle root_ of the group `Group_k`
@@ -127,21 +131,23 @@ If the merkle path is valid,
 the _signature share_ is checked with `blsVerify(Share_j, y_j, Input_e)`.
 If the share is invalid,
 `P_j` is punished for broadcasting an invalid signature share,
-and `P_i` is rewarded for proving `P_j`'s misbehavior.
+and `P_i` is rewarded for proving the misbehavior of `P_j`.
 If multiple _proofs of misbehavior_ are presented
 for the same _signature share message_,
 and proofs after the first one must be immediately rejected.
 
 ==== Rationale
 The signature share message:
+
 * `e` is used to prevent replay attacks and to identify `Group_k`.
 * `i` is used to identify `P_i`:
 the _operator ECDSA key_ can be identified from `Group_k` and `i`,
 but `P_i` cannot be identified from `Group_k` and the operator key.
 * The signature ensures that the message was produced
-by an actor who knows `P_i`'s secret ECDSA key.
+by an actor who knows the secret ECDSA key of `P_i`.
 
 The misbehavior proof:
+
 * `y_j` is used to verify `Share_j`.
 * The _merkle path_ is used to verify the provided `y_j`
 and that the correct member is accused.
