--- a/docs/rfc/rfc-8-beacon-signature-share-verification.adoc
+++ b/docs/rfc/rfc-8-beacon-signature-share-verification.adoc
@@ -7,13 +7,18 @@
 toc::[]
 
 == Proposal
-The document specifies an update
-to verify threshold signature shares for the random beacon.
+The document specifies an update to
+
+. verify threshold signature shares for the random beacon
+. punish operators who broadcast invalid shares,
+by publishing irrefutable proofs of misbehavior on-chain
 
 === Goal
-The goal of this proposal is to specify a method
-for beacon operators to verify signature shares received from other operators,
-and for on-chain resolution of misbehavior proofs on invalid signature shares.
+The goal of this proposal is to eliminate an attack
+where a beacon operator broadcasts invalid shares
+to other members in the same signing group,
+hindering or preventing the group
+from reconstructing a valid threshold signature.
 
 === Terminology
 `P1`:: The generator point for the BLS elliptic curve
@@ -32,6 +37,8 @@ and for on-chain resolution of misbehavior proofs on invalid signature shares.
 `y_i`:: The individual public key of `P_i`: `y_i = P1 * x_i`
 
 `Share_i`:: The signature share by `P_i`: `Share_i = Input_e * x_i`
+
+`N`:: The number of members in a group
 
 `H`:: The number of members required for a honest majority
 
@@ -64,9 +71,11 @@ stored at the conclusion of the DKG.
 
 Invalid signature shares are rejected,
 and the recipient should prepare and publish a proof of misbehavior on-chain.
+
 The proof of misbehavior is verified
 by using a merkle path from the accused participant's individual private key
-to a merkle root stored on-chain as a part of the DKG result.
+to a merkle root of all group members' individual private keys
+stored on-chain as a part of the DKG result.
 
 Using an on-chain merkle root minimizes storage requirements,
 while permitting _O(log(N))_ verification of misbehavior proofs.
@@ -74,24 +83,95 @@ The merkle root is also useful for other purposes.
 
 === Specification
 
-==== Off-chain
-Each `Share_i` must be broadcast as a _signature share message_
-adhering to a strict canonical format.
+==== Merkle trees of individual public keys
+At the conclusion of DKG for `Group_k`,
+the individual public key `y_i` is calculated
+for each participant `P_i` in `Group_k`.
+The individual public keys are hashed
+and the hashes placed as leaf nodes in a _merkle tree_,
+where each non-leaf node is further labeled
+with the hash of the hashes in its child nodes.
+If the number of members is not equal to _2^n_ for some _n_,
+unused leaf nodes in the tree are filled with the empty string `""`.
 
-The _signature share message_ must contain:
+The hash at the root of the tree,
+the _merkle root_ of the group's individual public keys,
+is included in the DKG result and published on-chain.
 
-* the entry identifier `e` for this particular entry
-* the signature share `Share_i`
-* the sender `P_i`'s member index `i`
-* a signature by `P_i` to the above data,
-using the _operator ECDSA key_ of `P_i`
+For example, for a group with 7 participants:
+
+----
+H_1 = H(y_1)
+H_2 = H(y_2)
+...
+H_7 = H(y_7)
+
+H_12 = H(H_1, H_2)
+H_34 = H(H_3, H_4)
+H_56 = H(H_5, H_6)
+H_78 = H(H_7, "")
+
+H_1234 = H(H_12, H_34)
+H_5678 = H(H_56, H_78)
+
+H_12345678 = H(H_1234, H_5678)
+----
+
+`H_12345678` is the _merkle root_ of the example case.
+
+The _merkle root_ makes it possible
+to verify any `y_i` on chain as the individual private key of `P_i`,
+by using a _merkle path_ from the _merkle root_ to `y_i`.
+The _merkle path_ contains hashes
+from other branches of the tree,
+so that the _merkle root_ can be calculated.
+In the example with `y_5` this would be
+`[H_6, H_78, H_1234]`:
+
+----
+H_5 = H(y_5)
+H_56 = H(H_5, H_6)
+H_5678 = H(H_56, H_78)
+H_12345678 = H(H_1234, H_5678)
+----
+
+If the obtained _merkle root_ matches the value
+recorded at group creation,
+the provided `y_i` and `i` are valid.
+
+The _merkle path_ for `y_i` from a group of `N` members
+is always of a known length,
+and is consumed in a specific order
+as the positions of the hashes in each branch
+can be calculated from `i`.
+Thus the _merkle path_ can be provided as a simple list of hashes,
+without labels.
+
+==== Verifying signature shares
+When `P_j` creates a signature share `Share_i`
+as a member of `Group_k` producing a threshold signature for `Entry_e`,
+the share must be broadcast as a _signature share message_,
+which must contain:
+
+* The entry identifier `e` for this particular entry;
+this is used to prevent replay attacks
+and to retrieve the information of `Group_k`.
+if the message is used in a misbehavior proof.
+* the signature share `Share_j`
+* the sender `P_j`'s member index `j`;
+`P_j` and their _operator ECDSA public key_
+can be identified from `Group_k` and `j`,
+but `P_j` cannot be identified from `Group_k` and the operator key.
+* a signature to the above data,
+using the _operator ECDSA key_ of `P_j`;
+this provides non-repudiability for the misbehavior proof.
 
 When `P_i` receives a _signature share message_ from `P_j`,
 they must verify the following:
 
 * the message is correctly formatted
 * the entry identifier `e` is correct
-* the signature with the _operator ECDSA key_ of `P_i` is valid
+* the signature with the _operator ECDSA key_ of `P_j` is valid
 
 If any of the above checks fail,
 the message must be rejected as invalid.
@@ -107,7 +187,7 @@ If `Share_j` is invalid,
 `P_i` must not use it for reconstructing the entry,
 and instead should produce and publish a proof of misbehavior on-chain.
 
-==== On-chain
+==== Proofs of misbehavior
 When `P_i` receives a valid _signature share message_
 (_"message"_ for short from now on)
 from `P_j`, containing an invalid `Share_j`,
@@ -115,10 +195,15 @@ from `P_j`, containing an invalid `Share_j`,
 
 The _proof_ must contain:
 
-* the _message_ with the invalid share from `P_j`
-* the individual private key `y_j` of `P_j`
-and a _merkle path_ from `y_j` to the _merkle root_ of the group `Group_k`
-* the member index `i` of the tattletale `P_i`
+* The _message_ with the invalid share from `P_j`
+* The individual private key `y_j` of `P_j`,
+used to verify the `Share_j` in the _message_.
+* The _merkle path_ from `y_j` to the _merkle root_ of the group `Group_k`,
+to verify `y_j`.
+* The member index `i` of the tattletale `P_i`,
+used to reward the correct party if the proof is valid.
+It is not necessary to verify the sender,
+as `P_i` is not punished if the proof is invalid.
 
 When the _proof_ is processed on-chain,
 the _message_ is parsed and its elements extracted.
@@ -146,25 +231,6 @@ and `P_i` is rewarded for proving the misbehavior of `P_j`.
 If multiple _proofs of misbehavior_ are presented
 for the same _signature share message_,
 and proofs after the first one must be immediately rejected.
-
-==== Rationale
-The signature share message:
-
-* `e` is used to prevent replay attacks and to identify `Group_k`.
-* `i` is used to identify `P_i`:
-the _operator ECDSA key_ can be identified from `Group_k` and `i`,
-but `P_i` cannot be identified from `Group_k` and the operator key.
-* The signature ensures that the message was produced
-by an actor who knows the secret ECDSA key of `P_i`.
-
-The misbehavior proof:
-
-* `y_j` is used to verify `Share_j`.
-* The _merkle path_ is used to verify the provided `y_j`
-and that the correct member is accused.
-* `i` is used to reward the correct party if the proof is valid.
-It is not necessary to verify the sender,
-as `P_i` is not punished if the proof is invalid.
 
 [bibliography]
 == Related Links
