commented out watching relay process and watching entry process for Node class

--- a/simulations/master_simulation/master_simulation.ipynb
+++ b/simulations/master_simulation/master_simulation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import simulation_components as sc\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -66,7 +66,7 @@
        "Text(0.5, 1.0, 'Virtual Staker Cumulative Distribution')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,13 +171,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[False False False ... False False False]\n",
-      " [False False False ... False False  True]\n",
-      " [False False False ... False False  True]\n",
+      "[[False False  True ... False False False]\n",
+      " [False False False ... False False False]\n",
+      " [ True False False ... False False False]\n",
       " ...\n",
-      " [False False False ... False  True False]\n",
-      " [False False  True ... False False False]\n",
-      " [False False False ... False False  True]]\n"
+      " [False False False ... False False  True]\n",
+      " [ True False  True ... False  True  True]\n",
+      " [False  True False ... False False False]]\n"
      ]
     }
    ],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -203,46 +203,89 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "creating nodes\n"
+      "creating nodes\n",
+      "creating groups\n",
+      "Node 0 ethereum connection successcycle=0\n",
+      "Node 0 Forking Main Loop cycle=0\n",
+      "Node 0 Watching Relay Request cycle=0\n",
+      "Node 0 Watching Relay Entry cycle=0\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'group_counter' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-ac0d2499eb09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m node_array = [sc.Node(env, 'Node %d' % i, datetime.datetime.now(), 10, group_counter)\n\u001b[0;32m----> 5\u001b[0;31m             for i in range(nodes)] #number of nodes\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"creating groups\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-8-ac0d2499eb09>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m node_array = [sc.Node(env, 'Node %d' % i, datetime.datetime.now(), 10, group_counter)\n\u001b[0;32m----> 5\u001b[0;31m             for i in range(nodes)] #number of nodes\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"creating groups\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'group_counter' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>number_of_entries_generated</th>\n",
+       "      <th>relay_request_time</th>\n",
+       "      <th>relay_entry_watch_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Node 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.617172</td>\n",
+       "      <td>3.51869</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id  number_of_entries_generated  relay_request_time  \\\n",
+       "0  Node 0                            0            3.617172   \n",
+       "\n",
+       "   relay_entry_watch_time  \n",
+       "0                 3.51869  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "env = simpy.Environment()\n",
     "print(\"creating nodes\")\n",
     "\n",
-    "node_array = [sc.Node(env, 'Node %d' % i, datetime.datetime.now(), 10, group_counter)\n",
-    "            for i in range(nodes)] #number of nodes\n",
+    "node_array = [sc.Node(env, 'Node %d' % i, datetime.datetime.now(), tickets)\n",
+    "            for i in range(1)]\n",
     "\n",
     "print(\"creating groups\")\n",
     "group_array = [sc.Group(env, i, group_size, group_distr_matrix)\n",
-    "            for i in range(runs)] #number of nodes\n",
+    "            for i in range(5)]\n",
     "\n",
-    "proc = relay_entry(env, runs, group_object_array, node_object_array)\n",
+    "proc = sc.relay_entry(env, 5, group_array, node_array)\n",
     "\n",
     "env.run(until=proc)\n",
     "\n",
     "df = []\n",
     "for n in node_array:\n",
     "    df.append([n.id, n.number_of_entries_generated\n",
-    "               , n.number_of_groups_joined\n",
     "               , n.relay_request_time\n",
     "               , n.relay_entry_watch_time])\n",
     "    \n",
     "df = pd.DataFrame(df)\n",
-    "df.columns=[\"id\", \"number_of_entries_generated\", \"number_of_groups_joined\", \"relay_request_time\", \"relay_entry_watch_time\"]\n",
+    "df.columns=[\"id\", \"number_of_entries_generated\", \"relay_request_time\", \"relay_entry_watch_time\"]\n",
     "df"
    ]
   },
