restructuring files, added a Mesa sim folder

--- a/simulations/simpy_simulation/master_simulation.ipynb
+++ b/simulations/simpy_simulation/master_simulation.ipynb
@@ -50,6 +50,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Group formation failure with virtual stakers \n",
+    "- threshold at which a group does not form\n",
+    "- this threshold is always greater than the signing threshold\n",
+    "\n",
+    "signing failure with vs\n",
+    "- there is a threshold at which a signature is not viable"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
