added group registration method to model

--- a/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
@@ -139,6 +139,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2]\n",
+      "[0 0]\n",
+      "[0.21103521 0.87188529 0.84818769 0.02410035 0.64396117]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = [[5,6,7,8], [1,10,10,12], [1,2,3,4]]\n",
+    "print(np.where(a == np.min(a))[0])\n",
+    "print(np.where(a == np.min(a))[1])\n",
+    "print(np.random.random_sample(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
